samples/_failures_safe/1761141589_e35ade_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c1fd7cc2.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_c1fd7cc2.c:175:9: error: expected declaration or statement at end of input
  175 |         }
      |         ^
./samples/SAFE/__tmp_c1fd7cc2.c:175:9: error: expected declaration or statement at end of input
